--- a/ReceiptVault/ReceiptVault/ReceiptVault.csproj
+++ b/ReceiptVault/ReceiptVault/ReceiptVault.csproj
@@ -113,6 +113,7 @@
     <None Include="ReceiptVault_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\testBonnetje.bmp" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
