OCR gedeelte werkt niet helemaal flawless. Debugging nodig. Poging tot navigator klasse te maken.

--- a/ReceiptVault/ReceiptVault/ReceiptVault.csproj
+++ b/ReceiptVault/ReceiptVault/ReceiptVault.csproj
@@ -105,6 +105,7 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="MainScreen.cs" />
+    <Compile Include="navigator.cs" />
     <Compile Include="newEntryScreenScreen.xaml.cs">
       <DependentUpon>newEntryScreenScreen.xaml</DependentUpon>
     </Compile>
