--- a/ReceiptVault/ReceiptVault/project.json
+++ b/ReceiptVault/ReceiptVault/project.json
@@ -5,6 +5,7 @@
     "Microsoft.ApplicationInsights.WindowsApps": "1.1.1",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0",
     "SQLite.Net-PCL": "3.1.1",
+    "UniversalWrapPanel": "1.0.0",
     "WinRTXamlToolkit.Controls.DataVisualization.UWP": "2.0.0"
   },
   "frameworks": {
