Meer visuele feedback, meer user interaction, meer gebruiksvriendelijkheid, minder slaap, minder nachtrust. TODO: kleurencoding... Mocht dit werken.

--- a/ReceiptVault/ReceiptVault/ReceiptVault.csproj
+++ b/ReceiptVault/ReceiptVault/ReceiptVault.csproj
@@ -123,6 +123,7 @@
     <None Include="ReceiptVault_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\arrow.png" />
     <Content Include="Assets\file.bmp" />
     <Content Include="Assets\graph.png" />
     <Content Include="Assets\home.bmp" />
